<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cursmedia.pascalcoin.controller.AccountActivity">
    <item
        android:id="@+id/action_nodes_management"
        android:orderInCategory="10"
        android:title="@string/title_menu_connection_nodes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_keys_management"
        android:orderInCategory="10"
        android:title="@string/title_menu_private_keys"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_key"
        android:orderInCategory="10"
        android:title="@string/action_show_key"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_app"
        android:orderInCategory="30"
        android:title="@string/about_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_pasc"
        android:orderInCategory="30"
        android:title="@string/about_pasc_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="40"
        android:title="@string/logout_menu"
        android:visible="false"
        app:showAsAction="never" />
</menu>
