<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cursmedia.pascalcoin.controller.AccountActivity">
    <item
        android:id="@+id/action_transfer_account"
        android:orderInCategory="10"
        android:title="@string/txt_transfer_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_info"
        android:orderInCategory="20"
        android:title="@string/change_account_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list_account"
        android:orderInCategory="30"
        android:title="@string/sell_account"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delist_account"
        android:orderInCategory="30"
        android:title="@string/delist_account"
        android:visible="false"
        app:showAsAction="never" />
</menu>
