<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".controller.SendPascFragment">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:theme="@style/AppTheme.AppBarOverlay">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/txt_title_size"
        android:id="@+id/send_pasc_title"
        android:text="@string/txt_send" />
    </android.support.design.widget.AppBarLayout>
    <ScrollView

        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_intro_size"
        android:id="@+id/send_pasc_intro"
        android:text="@string/txt_send_pasc_from" />
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/destination_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_dest_account"
        android:nextFocusDown="@+id/destination_account_checksum"
        android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:text="-"
            android:textSize="21dp"
            android:layout_gravity="bottom"
            android:ems="1"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/destination_account_checksum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:maxLength="2"
            android:layout_gravity="bottom"
            android:nextFocusDown="@+id/transfer_amount"
            android:inputType="number" />
        <ImageButton
            android:id="@+id/buttonSearchAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:src="@android:drawable/ic_menu_search" />

    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="@dimen/txt_title_size"
                    android:text="@string/txt_sending_from" />
        <Spinner
                    android:id="@+id/spinAccountPayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:hint="@string/txt_pay_account"
                    android:spinnerMode="dropdown"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/transfer_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/txt_amount"
        android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/transfer_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_fee"
        android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>
    <include layout="@layout/payload_form" />
    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_confirm" />
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" />
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</LinearLayout>
